--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
